third_party/WebKit/Source/core/html/HTMLFormControlElement.cpp
@@ -574,6 +574,8 @@ void HTMLFormControlElement::setNeedsValidityCheck() {
     fieldSetAncestorsSetNeedsValidityCheck(parentNode());
     pseudoStateChanged(CSSSelector::PseudoValid);
     pseudoStateChanged(CSSSelector::PseudoInvalid);
+    pseudoStateChanged(CSSSelector::PseudoInRange);
+    pseudoStateChanged(CSSSelector::PseudoOutOfRange);
   }
 
   // Updates only if this control already has a validation message.
